2009-03-23  Curtis Gedak  <gedakc@gmail.com>

	* src/DMRaid.cc: Fixed error when resizing an extended partition.

2009-03-16  Curtis Gedak  <gedakc@gmail.com>

	* include/DMRaid.h: Enhanced dmraid partition deletion.
	  - Handle partition names with or without a 'p' between the
	    device name and the partition number.

	* include/GParted_Core.h,
	  src/GParted_Core.cc: Improved swap and dmraid mountpoint detection.

2009-03-14  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Added initial support for dmraid devices.
	  - Closes GParted bug #317262

	* include/DMRaid.h,
	  include/Makefile.am,
	  src/DMRaid.cc,
	  src/Makefile.am: Added new class for dmraid support.

	* README: Added note about requirements for dmraid support.
	  - added note that xxd command also needed for NTFS support.

2009-03-13  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Utils.cc: Removed file_exists() method.
	  - Glib::file_test() already exists and is available for use.

2009-03-12  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Utils.cc: Added tokenize() and file_exists() methods.

2009-02-27  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Enabled type checking (const instead of #define)

2009-02-25  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Added recognition of /dev/mmcblk* SD/MMC devices.
	  - Closes GParted bug #564985

2009-02-23  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Dialog_Partition_New.cc,
	  src/DialogFeatures.cc,
	  src/GParted_Core.cc,
	  src/Utils.cc,
	  src/Win_GParted.cc: Added detection of btrfs file system.
	  - Thanks to Luca Bruno for the original btrfs patch that I adapted.
	  - Related to GParted bug #571170

2009-02-20  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Fixed compiler warning regarding parentheses.

2009-02-18  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Dialog_Partition_New.cc,
	  src/DialogFeatures.cc,
	  src/GParted_Core.cc,