@@ -1,5 +1,8 @@
 2009-03-23  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/linux_swap.cc: Maintained label and uuid when resizing swap.
+	  - Closes GParted bug #575585
+
 	* src/DMRaid.cc: Fixed error when resizing an extended partition.
 
 2009-03-16  Curtis Gedak  <gedakc@gmail.com>
